--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,4 +5,4 @@ static_sites:
     branch: main
     deploy_on_push: true
     repo: digitalocean/sample-html
-  name: sample-html
+  name: 2sample-html
